--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,4 +40,31 @@ body {
   background-position: center; /* Centers the image within the element */
   background-repeat: no-repeat;
 }
+.consultaionForm {
+  background-color: white;
+  margin-top: 3rem;
+  padding: 1.5rem 3rem;
+  width: 100%;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  height: 100%;
+}
+
+@media (max-width: 500px) {
+  .consultaionForm {
+    /* Adjust styles for devices with a width less than 500px */
+    margin-top: 2.5rem;
+    padding: 1.5rem 1rem;
+    /* You can also adjust the width if needed */
+    width: 100vw;
+  }
+}
+
+.formStepper{
+  
+}
+@media (max-width: 410px) {
+  .formStepper {
+    
+  }
+}
 
