--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,7 @@ body {
   background-repeat: no-repeat;
 }
 .countriesBackgroundBanner{
-  background-image: url('../assets/CountriesBanner1.jpg');
+  /* background-image: url('../assets/CountriesBanner1.jpg'); */
   background-size: cover; /* Ensures the image covers the entire element */
   background-position: center; /* Centers the image within the element */
   background-repeat: no-repeat;
